# image-curved-triangulation

./: CMakeLists.txt  README.md  timer.h  xlog.h
curved-triangulation/: CMakeLists.txt  Douglas-Peucker.h  Sutherland-Hodgeman2.h  approx.cpp  bezier2.h  curved-triangulation.cpp  curved-triangulation.h  energy.cpp  gradients.cpp  init.cpp  io.cpp  main.cpp  mesh.cpp  optimize.cpp  pixelset.h  polynomial.h  rasterizer.h  svg-utils.h  trimesh.cpp  trimesh.h  utils.h
examples/: 2-processed-features.txt  run-edge-detection.bat
examples/cherry/: 1-detected-features.txt  2-processed-features.txt  3-init-mesh.om  5-result-mesh.om  run-curved-triangulation.bat  run-edge-detection.bat
examples/flower/: 1-detected-features.txt  3-init-mesh.om  5-result-mesh.om  run-curved-triangulation.bat
examples/mario/: 1-detected-features.txt  2-processed-features.txt  3-init-mesh.om  5-result-mesh.om  run-curved-triangulation.bat  run-edge-detection.bat
